--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation 'com.github.sujithkanna:smileyrating:1.6.8'
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
