--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
 
     implementation 'com.github.sujithkanna:smileyrating:1.6.8'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.larswerkman:HoloColorPicker:1.5'
 }
